2014-10-02  Kaz Kylheku  <kaz@kylheku.com>

	Using unified COBJ representation for both regex kinds,
	rather than the list-based notation for derivative-based
	regexes, and an encapsulated COBJ for NFA-based regexes.

	* lib.c (compiled_regex_s): Variable removed.
	(obj_init): Initialization of compiled_regex_s removed.

	* lib.h (compiled_regex_s): Declaration removed.

	* regex.c (struct regex, regex_t): New type.
	(regex_destroy): Object is now a regex_t, not nfa_t.
	(regex_mark): New function.
	(regex_obj_ops): Register regex_mark operation.
	(reg_nullable, reg_derivative): Remove cases that handles
	compiled_regex_s.
	(regex_compile): Output of dv_compile_regex becomes
	a cobj nwo. Output of nfa_compile_regex must be
	embedded in regex_t structure.
	(regexp): Drop the check for compiles_regex_s.
	(regex_nfa): Function removed.
	(regex_run, regex_machine_init): Use cobj_handle to retrieve regex_t *
	pointer and dispatch appropriate code based on regex->kind.

2014-09-30  Kaz Kylheku  <kaz@kylheku.com>

	* genman.txr: Add PayPal donation button.

	* txr.1: Avoid escapes at the end of a line; man2html doesn't
	handle this properly.

2014-09-30  Kaz Kylheku  <kaz@kylheku.com>

	* genman.txr: TXR is now bolded in the title.

	* txr.1: More formatting and wording fixes.

2014-09-26  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (do_and): Fix andf again: (andf) not producing
	a function that returns t, as documented.

2014-09-26  Kaz Kylheku  <kaz@kylheku.com>

	Version 98.

	* RELNOTES: Updated.

	* configure, txr.1: Bumped version.

	* share/txr/stdlib/ver.txr: Likewise

	* dep.mk, txr.vim: Regenerated.

2014-09-26  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Substantially revised with rich troff markup,
	and restructured in some places.

	* genman.txr: No longer generate the whole document in
	monospaced font. Add hyperlinks.

2014-09-25  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (do_and, do_or): Fix broken andf and orf,
	lacking the semantics of returning the last value,